test/spec_vectors/exports/ok/module_31.wat
(module (export "a" (global 0)) (global i32 (i32.const 0)))