test/spec_vectors/exports/fail/module_86.wat
(module (memory 0) (global i32 (i32.const 0)) (export "a" (memory 0)) (export "a" (global 0)))